# SAMWISE

./: .gitignore  echo_epoch_metric_aggregation.ipynb  echo_ref-vos_eda.ipynb  engine.py  inference_davis.py  inference_demo.py  inference_echo.py  inference_mevis.py  inference_ytvos.py  main.py  opts.py  pyproject.toml  requirements.txt  train_echo_refvos.slurm
datasets/: ytvos.py
fairseq/: file_utils.py
fairseq/dataclass/: initialize.py
models/: samwise.py
scripts/: eval_echo_epoch_p2flow_metrics.py  prepare_echo_as_refvos.py  train_echo_refvos.slurm
