[project]
name = "samwise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "av>=17.0.0",
    "bitarray>=3.8.1",
    "einops==0.8.0",
    "fvcore>=0.1.5.post20221221",
    "gdown>=5.2.1",
    "h5py>=3.16.0",
    "hydra-core==1.3.2",
    "imgaug==0.4.0",
    "moviepy>=2.2.1",
    "numpy<2",
    "opencv-python==4.10.0.84",
    "pandas>=3.0.2",
    "py3-wget>=1.0.13",
    "pycocotools==2.0.7",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "spacy>=3.8.14",
    "timm==1.0.7",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.3",
    "wandb>=0.25.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
